[package]
name = "project-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.1", features = ["macros"] }
actix-cors = "0.6.1"
actix-identity = "0.4.0"
dotenv = "0.15.0"
sqlx = { version = "0.5.11", features = ["chrono", "runtime-actix-native-tls", "postgres", "macros", "offline"] }
serde = "1.0.136"
anyhow = "1.0.56"
argon2 = "0.4.0"
rand_core = { version = "0.6.3", features = ["std"] }
chrono = { version = "0.4.19", features = ["serde"] }